(BSR)[PRO] fix: multidownload dropdown z-index

--- a/pro/src/styles/variables/_z-index.scss
+++ b/pro/src/styles/variables/_z-index.scss
@@ -1,4 +1,5 @@
 $sticky-bar-z-index: 1;
 $recurrence-sticky-bar: $sticky-bar-z-index + 1; // This is a sticky bar that should "replace" the form sticky bar by going above it
+$multidownload-dropdown: 1;
 $select-options-z-index: 3; // The sticky action bar z-index was set to 1. We have to set it to 2 so the select result would display over the sticky bar.
 $modal-z-index: 10;
